--- a/TheGuard_Command_Reference.tex
+++ b/TheGuard_Command_Reference.tex
@@ -147,6 +147,15 @@
         \subsubsection*{Syntax}
             Direct Message to the Bot: \texttt{/removecommand name}\\
 
+    \subsection{\texttt{/replacecommand}}
+        \subsubsection*{Description}
+            The \texttt{/replacecommand} Command allows an Admin or Master to replace a Custom Command that will be available in All Groups the Bot is managing. \\
+            After running the command the bot will ask for the group being able to use the command again. After that the bot will ask for the content the command should send.
+
+        \subsubsection*{Syntax}
+            Direct Message to the Bot: \texttt{/replacecommand name}\\
+
+
 \newpage
 \section{Everyone}
     \subsection{\texttt{/staff}}
