Make TOC entries clickable
Signed-off-by: SitiSchu <admin@sitischu.com>

--- a/TheGuard_Command_Reference.tex
+++ b/TheGuard_Command_Reference.tex
@@ -7,6 +7,7 @@
 \usepackage[T1]{fontenc}
 \usepackage[useregional]{datetime2}
 \usepackage[makeroom]{cancel}
+\usepackage[hidelinks]{hyperref}
 
 %% Sets page size and margins
 \usepackage[a4paper,top=2cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
