Add note to warn and ban
Signed-off-by: SitiSchu <admin@sitischu.com>

--- a/TheGuard_Command_Reference.tex
+++ b/TheGuard_Command_Reference.tex
@@ -71,7 +71,7 @@
 
     \subsection{\texttt{/warn}}
         \subsubsection*{Description}
-            The \texttt{/warn} Command allows an Admin or Master to warn a User. If used as a reply, the Bot will delete the Message that was replied to.
+            The \texttt{/warn} Command allows an Admin or Master to warn a User. If used as a reply, the Bot will delete the Message that was replied to. If you specify a ID or Username after the command but reply to a message the bot will ignore the ID or Username and ban the User you replied to instead.
 
         \subsubsection*{Syntax}
             In reply to a message: \texttt{/warn reason}\\
@@ -99,7 +99,7 @@
 
     \subsection{\texttt{/ban}}
         \subsubsection*{Description}
-            The \texttt{/ban} Command allows an Admin or Master to ban a User. If used as a reply, the Message that was replied to will be Deleted. Banning a User will remove him from all groups the Bot is administrating. If they aren't in a Group but try to join after being banned, the bot will ban them after entering.
+            The \texttt{/ban} Command allows an Admin or Master to ban a User. If used as a reply, the Message that was replied to will be Deleted. Banning a User will remove him from all groups the Bot is administrating. If they aren't in a Group but try to join after being banned, the bot will ban them after entering. If you specify a ID or Username after the command but reply to a message the bot will ignore the ID or Username and ban the User you replied to instead.
 
         \subsubsection*{Syntax}
             In reply to a message: \texttt{/ban reason}\\
